hlvm/test/invalid/until.hlx
<?xml version="1.0" encoding="UTF-8"?>
<hlvm xmlns="http://hlvm.org/src/hlvm/Reader/XML/HLVM.rng" pubid="http://hlvm.org/src/hlvm/test/invalid/until.hlx">
  <bundle id="until">
    <constant id="0" type="s32">
      <dec>0</dec>
    </constant>
    <constant id="1" type="s32">
      <dec>1</dec>
    </constant>
    <program id="until">
      <block>
        <!-- Non-boolean control expression -->
        <until>
          <ref id="0"/>
          <ref id="1"/>
        </until>
        <!-- Block without result where one expected -->
        <!-- Void function result for non-void function -->
        <result>
          <until>
            <block><ref id="0"/></block>
            <ne>
              <ref id="1"/>
              <ref id="0"/>
            </ne>
          </until>
        </result>
        <result>
          <ref id="0"/>
        </result>
        <ret/>
      </block>
    </program>
  </bundle>
</hlvm>
